@@ -1,3 +1,6 @@
+2012-01-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* More deterministic target order when using backend (ticket #113).
+
 2012-01-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Using 'ha_node' in models when using backend is ok (ticket #109).
 
